--- a/.gitignore
+++ b/.gitignore
@@ -120,9 +120,9 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+VizeOdeviAhmet/docker.env
 .venv
-env/
+*.env
 venv/
 ENV/
 env.bak/
@@ -158,4 +158,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
-.env/
+VizeOdeviAhmet/docker.env/
