--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
 
     ports:
       - "0.0.0.0:8000:8000"
-    command: python mange.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
 
 volumes:
   static-date:
